Implement ArcNotificationDelegate::Click() for ArcCustomNotificationItem.

This method will be called when pressing Enter key on an ARC
notification.

BUG=703556

Review-Url: https://codereview.chromium.org/2761283002
Cr-Commit-Position: refs/heads/master@{#458670}

Former-commit-id: a9b559687be78936e36e571768dee3cc377131a6